Resolves: fdo#56549 crash in format->autocorrect->apply and edit changes

regression from cad9afa15f53d547733fa55f1353772f6d696611

Change-Id: I1aa36bf86969a5a90456817d360d59125948e519
(cherry picked from commit 32c26ffb1f7585318a11f684a9886b58cea5b307)
Reviewed-on: https://gerrit.libreoffice.org/1218
Reviewed-by: Miklos Vajna <vmiklos@suse.cz>
Tested-by: Miklos Vajna <vmiklos@suse.cz>